# autotools-example

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  main.c
src/lib/: Makefile.am
src/lib/libsome/: Makefile.am  libsome.c  libsome.h
src/lib/libsomeother/: Makefile.am  libsomeother.c  libsomeother.h
