#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([autotools_ex2], [1.0])

AC_CONFIG_MACRO_DIRS([m4])

# Checks for programs.
AC_PROG_CC
AM_PROG_AR
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# auto generate make file
AM_INIT_AUTOMAKE

# initiate libtool
LT_INIT

AC_CONFIG_FILES([Makefile src/Makefile src/lib/Makefile src/lib/libsome/Makefile src/lib/libsomeother/Makefile])

AC_OUTPUT
